--- a/src/main/resources/Sokoban/Level1.fxml
+++ b/src/main/resources/Sokoban/Level1.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.Level1Controller">
-   <GridPane layoutX="83.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0">
+   <GridPane fx:id="GridBoard"  layoutX="83.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -69,23 +69,23 @@
          <Font size="18.0" />
       </font>
    </Label>
+   <Button fx:id="Btn_back" layoutX="152.0" layoutY="50.0" mnemonicParsing="false" onMousePressed="#BackBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
    <Label fx:id="steps" layoutX="651.0" layoutY="57.0" text="0">
       <font>
          <Font size="18.0" />
       </font>
    </Label>
-   <Button fx:id="Btn_back" layoutX="152.0" layoutY="50.0" mnemonicParsing="false" onMousePressed="#BackBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
    <Label fx:id="Label_timer" layoutX="767.0" layoutY="57.0" text="timer:">
       <font>
          <Font size="18.0" />
       </font>
    </Label>
-   <Label fx:id="time" layoutX="827.0" layoutY="57.0" text="00:00">
+   <Label fx:id="Label_clock" layoutX="827.0" layoutY="57.0" text="00:00">
       <font>
          <Font size="18.0" />
       </font>
    </Label>
-   <GridPane layoutX="697.0" layoutY="332.0" prefHeight="188.0" prefWidth="190.0">
+   <GridPane fx:id="Movement" focusTraversable="true" layoutX="697.0" layoutY="332.0" onKeyPressed="#MovePlayer" prefHeight="188.0" prefWidth="190.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
