--- a/src/main/resources/Sokoban/Level1.fxml
+++ b/src/main/resources/Sokoban/Level1.fxml
@@ -13,8 +13,8 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.Level1Controller">
-   <GridPane fx:id="GridBoard"  layoutX="83.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0">
+<AnchorPane fx:id="Pane" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.Level1Controller">
+   <GridPane fx:id="GridBoard" layoutX="83.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -59,17 +59,17 @@
          <Font name="Book Antiqua Bold" size="49.0" />
       </font>
    </Label>
-   <Button fx:id="Btn_home" layoutX="88.0" layoutY="49.0" mnemonicParsing="false" onMousePressed="#HomeBtnPressed" prefHeight="38.0" prefWidth="40.0" />
-   <ImageView fx:id="Img_home" fitHeight="60.0" fitWidth="50.0" layoutX="83.0" layoutY="43.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+   <Button fx:id="Btn_home" layoutX="38.0" layoutY="49.0" mnemonicParsing="false" onMousePressed="#HomeBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
+   <ImageView fx:id="Img_home" disable="true" fitHeight="60.0" fitWidth="50.0" layoutX="33.0" layoutY="44.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
       <Image url="@Sokoban/pictures/home.jpg" />
 
-   </ImageView>
+         </ImageView>
    <Label fx:id="Label_steps" layoutX="588.0" layoutY="50.0" prefHeight="38.0" prefWidth="50.0" text="steps:">
       <font>
          <Font size="18.0" />
       </font>
    </Label>
-   <Button fx:id="Btn_back" layoutX="152.0" layoutY="50.0" mnemonicParsing="false" onMousePressed="#BackBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
+   <Button fx:id="Btn_back" layoutX="98.0" layoutY="50.0" mnemonicParsing="false" onMousePressed="#BackBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
    <Label fx:id="steps" layoutX="651.0" layoutY="57.0" text="0">
       <font>
          <Font size="18.0" />
@@ -80,12 +80,12 @@
          <Font size="18.0" />
       </font>
    </Label>
-   <Label fx:id="Label_clock" layoutX="827.0" layoutY="57.0" text="00:00">
+   <Label fx:id="myTime" layoutX="827.0" layoutY="57.0" text="00:00">
       <font>
          <Font size="18.0" />
       </font>
    </Label>
-   <GridPane fx:id="Movement" focusTraversable="true" layoutX="697.0" layoutY="332.0" onKeyPressed="#MovePlayer" prefHeight="188.0" prefWidth="190.0">
+   <GridPane fx:id="Movement" layoutX="697.0" layoutY="332.0" prefHeight="188.0" prefWidth="190.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -104,7 +104,15 @@
    <ImageView fx:id="Img_Move" disable="true" fitHeight="171.0" fitWidth="391.0" layoutX="712.0" layoutY="350.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
       <Image url="@Sokoban/pictures/move.jpeg" />
    </ImageView>
-   <ImageView fx:id="Img_Back" fitHeight="50.0" fitWidth="40.0" layoutX="152.0" layoutY="48.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+   <ImageView fx:id="Img_Back" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="98.0" layoutY="49.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
       <Image url="@Sokoban/pictures/back.jpg" />
+   </ImageView>
+   <Button fx:id="Btn_load" layoutX="156.0" layoutY="49.0" mnemonicParsing="false" onMousePressed="#LoadBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
+   <Button fx:id="Btn_save" layoutX="222.0" layoutY="50.0" mnemonicParsing="false" onMousePressed="#SaveBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
+   <ImageView fx:id="Img_load" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="156.0" layoutY="48.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+      <Image url="@Sokoban/pictures/load.jpeg" />
+   </ImageView>
+   <ImageView fx:id="Img_save" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="222.0" layoutY="48.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+      <Image url="@Sokoban/pictures/download.jpg" />
    </ImageView>
 </AnchorPane>
