--- a/src/main/resources/Sokoban/Level1.fxml
+++ b/src/main/resources/Sokoban/Level1.fxml
@@ -30,11 +30,11 @@
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
-      <Rectangle fx:id="board1" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" />
-      <Rectangle fx:id="board18" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.rowIndex="1" />
-      <Rectangle fx:id="board2" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.rowIndex="2" />
-      <Rectangle fx:id="board3" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.rowIndex="3" />
-      <Rectangle fx:id="board4" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.rowIndex="4" />
+      <Rectangle fx:id="board1" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+      <Rectangle fx:id="board18" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+      <Rectangle fx:id="board2" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+      <Rectangle fx:id="board3" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+      <Rectangle fx:id="board4" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="0" GridPane.rowIndex="4" />
       <Rectangle fx:id="board5" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Rectangle fx:id="board6" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
       <Rectangle fx:id="board7" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
@@ -43,11 +43,11 @@
       <Rectangle fx:id="board10" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
       <Rectangle fx:id="board11" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
       <Rectangle fx:id="board12" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-      <Rectangle fx:id="board13" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="5" />
-      <Rectangle fx:id="board14" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="4" />
-      <Rectangle fx:id="board15" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="3" />
-      <Rectangle fx:id="board16" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="2" />
-      <Rectangle fx:id="board17" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="1" />
+      <Rectangle fx:id="board13" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="5" GridPane.rowIndex="0" />
+      <Rectangle fx:id="board14" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+      <Rectangle fx:id="board15" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+      <Rectangle fx:id="board16" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+      <Rectangle fx:id="board17" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="100.0" stroke="#948d8d" strokeType="INSIDE" width="100.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
       <Rectangle fx:id="box1" arcHeight="25.0" arcWidth="25.0" fill="#f27209" height="100.0" stroke="#151515" strokeType="INSIDE" width="100.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
       <Rectangle fx:id="box2" arcHeight="25.0" arcWidth="25.0" fill="#f27209" height="100.0" stroke="#181817" strokeType="INSIDE" width="100.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
       <Polygon fx:id="target1" fill="#1fff33" points="68.69886016845703, -26.198131561279297, 93.4000244140625, 12.300029754638672, 45.19888687133789, 12.300043106079102" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
