--- a/src/main/resources/Sokoban/Level1.fxml
+++ b/src/main/resources/Sokoban/Level1.fxml
@@ -80,7 +80,7 @@
          <Font size="18.0" />
       </font>
    </Label>
-   <Label fx:id="myTime" layoutX="827.0" layoutY="57.0" text="00:00">
+   <Label fx:id="myTime" layoutX="827.0" layoutY="57.0" >
       <font>
          <Font size="18.0" />
       </font>
