--- a/src/main/resources/Sokoban/Level2.fxml
+++ b/src/main/resources/Sokoban/Level2.fxml
@@ -89,7 +89,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="myTime" layoutX="837.0" layoutY="67.0" text="00:00">
+      <Label fx:id="myTime" layoutX="837.0" layoutY="67.0" >
          <font>
             <Font size="18.0" />
          </font>
