--- a/src/main/resources/Sokoban/Level3.fxml
+++ b/src/main/resources/Sokoban/Level3.fxml
@@ -93,7 +93,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="myTime" layoutX="847.0" layoutY="77.0" text="00:00">
+      <Label fx:id="myTime" layoutX="847.0" layoutY="77.0">
          <font>
             <Font size="18.0" />
          </font>
