--- a/src/main/resources/Sokoban/Level5.fxml
+++ b/src/main/resources/Sokoban/Level5.fxml
@@ -35,11 +35,13 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Rectangle fx:id="board28" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
             <Circle fx:id="Niker" fill="DODGERBLUE" radius="30.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
             <Polygon fx:id="target1" fill="#1fff33" points="68.69886016845703, -26.198131561279297, 93.4000244140625, 12.300029754638672, 45.19888687133789, 12.300043106079102" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
             <Polygon fx:id="target2" fill="#1fff33" points="68.69886016845703, -26.198131561279297, 93.4000244140625, 12.300029754638672, 45.19888687133789, 12.300043106079102" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
             <Polygon fx:id="target3" fill="#1fff33" points="68.69886016845703, -26.198131561279297, 93.4000244140625, 12.300029754638672, 45.19888687133789, 12.300043106079102" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <Rectangle fx:id="box1" arcHeight="25.0" arcWidth="25.0" fill="#f7a438" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Rectangle fx:id="box2" arcHeight="25.0" arcWidth="25.0" fill="#f7a438" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Rectangle fx:id="box3" arcHeight="25.0" arcWidth="25.0" fill="#f7a438" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
             <Rectangle fx:id="board1" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Rectangle fx:id="board2" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
             <Rectangle fx:id="board3" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="0" GridPane.rowIndex="2" />
@@ -63,10 +65,8 @@
             <Rectangle fx:id="board21" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
             <Rectangle fx:id="board22" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="5" GridPane.rowIndex="0" />
             <Rectangle fx:id="board23" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <Rectangle fx:id="board24" arcHeight="25.0" arcWidth="25.0" fill="#f7a438" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Rectangle fx:id="board25" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Rectangle fx:id="board26" arcHeight="25.0" arcWidth="25.0" fill="#f7a438" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <Rectangle fx:id="board27" arcHeight="25.0" arcWidth="25.0" fill="#f7a438" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+            <Rectangle fx:id="board24" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Rectangle fx:id="board25" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="70.0" stroke="#948d8d" strokeType="INSIDE" width="70.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
          </children>
       </GridPane>
       <Label fx:id="Label_Level5" layoutX="344.0" layoutY="67.0" prefHeight="60.0" prefWidth="159.0" text="Level5" textAlignment="CENTER">
