--- a/src/main/resources/Sokoban/Level2.fxml
+++ b/src/main/resources/Sokoban/Level2.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.Level2Controller">
+<AnchorPane fx:id="Pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" stylesheets="@Style/LevelGame.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.Level2Controller">
    <children>
       <GridPane fx:id="GridBoard" layoutX="80.0" layoutY="123.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="560.0">
          <columnConstraints>
@@ -59,7 +59,7 @@
             <Rectangle fx:id="board23" arcHeight="25.0" arcWidth="25.0" fill="#b3b8bd" height="80.0" stroke="#948d8d" strokeType="INSIDE" width="80.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Rectangle fx:id="box1" arcHeight="25.0" arcWidth="25.0" fill="#f27209" height="80.0" stroke="#151515" strokeType="INSIDE" width="80.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Rectangle fx:id="box2" arcHeight="25.0" arcWidth="25.0" fill="#f27209" height="80.0" stroke="#151515" strokeType="INSIDE" width="80.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <Circle fx:id="Niker" fill="DODGERBLUE" radius="24.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Circle fx:id="Niker" fill="DODGERBLUE" radius="30.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
             <Polygon fx:id="target1" fill="#1fff33" points="68.69886016845703, -26.198131561279297, 93.4000244140625, 12.300029754638672, 45.19888687133789, 12.300043106079102" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
             <Polygon fx:id="target2" fill="#1fff33" points="68.69886016845703, -26.198131561279297, 93.4000244140625, 12.300029754638672, 45.19888687133789, 12.300043106079102" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
          </children>
