游戏逻辑正式完成版

--- a/src/main/resources/Sokoban/Victory.fxml
+++ b/src/main/resources/Sokoban/Victory.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" style="-fx-background-color: YELLOW;" stylesheets="@Style/VictoryFailed.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.VictoryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.VictoryController">
    <children>
       <ImageView fitHeight="649.0" fitWidth="953.0" layoutX="-21.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -15,12 +14,12 @@
          </image>
       </ImageView>
       <AnchorPane layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" />
-      <Button fx:id="Btn_NextLevel" layoutX="186.0" layoutY="442.0" mnemonicParsing="false" onMouseReleased="#NextLevelBtnReleased" text="next level">
+      <Button fx:id="Btn_NextLevel" layoutX="186.0" layoutY="442.0" mnemonicParsing="false" onMouseReleased="#NextLevelBtnReleased" style="-fx-background-radius: 15;" text="next level">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="Btn_Home" layoutX="651.0" layoutY="442.0" mnemonicParsing="false" onMouseReleased="#HomeBtnReleased" style="-fx-background-color: #efe011;" text="home">
+      <Button fx:id="Btn_Home" layoutX="651.0" layoutY="442.0" mnemonicParsing="false" onMouseReleased="#HomeBtnReleased" style="-fx-background-radius: 15;" text="home">
          <font>
             <Font size="20.0" />
          </font>
