优化了游客模式，美化胜负页面按钮

--- a/src/main/resources/Sokoban/Level5.fxml
+++ b/src/main/resources/Sokoban/Level5.fxml
@@ -17,7 +17,7 @@
    <children>
       <ImageView fitHeight="633.0" fitWidth="917.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Sokoban/pictures/Health%20Center.jpg" />
+            <Image url="@Sokoban/pictures/Health Center.jpg" />
          </image>
       </ImageView>
       <AnchorPane fx:id="Pane" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0">
