L6初始化，部分细节修改

--- a/src/main/resources/Sokoban/Level1.fxml
+++ b/src/main/resources/Sokoban/Level1.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.Level1Controller">
    <children>
       <ImageView fitHeight="648.0" fitWidth="919.0" layoutY="-1.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
@@ -97,7 +96,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <GridPane fx:id="Movement" layoutX="697.0" layoutY="332.0" prefHeight="188.0" prefWidth="190.0">
+            <GridPane fx:id="Movement" layoutX="697.0" layoutY="332.0" prefHeight="180.0" prefWidth="180.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -109,17 +108,12 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="Btn_up" mnemonicParsing="false" onMousePressed="#UpBtnPressed" opacity="0.0" prefHeight="54.0" prefWidth="58.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-                  <Button fx:id="Btn_left" mnemonicParsing="false" onMousePressed="#LeftBtnPressed" opacity="0.0" prefHeight="58.0" prefWidth="47.0" text="Button" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button fx:id="Btn_down" mnemonicParsing="false" onMousePressed="#DownBtnPressed" opacity="0.0" prefHeight="66.0" prefWidth="53.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-                  <Button fx:id="Btn_right" mnemonicParsing="false" onMousePressed="#RightBtnPressed" opacity="0.0" prefHeight="62.0" prefWidth="51.0" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                  <Button fx:id="Btn_up" mnemonicParsing="false" onMousePressed="#UpBtnPressed" opacity="0.5" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
+                  <Button fx:id="Btn_left" mnemonicParsing="false" onMousePressed="#LeftBtnPressed" opacity="0.5" prefHeight="60.0" prefWidth="60.0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button fx:id="Btn_down" mnemonicParsing="false" onMousePressed="#DownBtnPressed" opacity="0.5" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" />
+                  <Button fx:id="Btn_right" mnemonicParsing="false" onMousePressed="#RightBtnPressed" opacity="0.5" prefHeight="60.0" prefWidth="60.0" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <ImageView fx:id="Img_Move" disable="true" fitHeight="171.0" fitWidth="391.0" layoutX="712.0" layoutY="350.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@Sokoban/pictures/move.jpeg" />
-               </image>
-            </ImageView>
             <ImageView fx:id="Img_Back" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="98.0" layoutY="49.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@Sokoban/pictures/back.jpg" />
